# BBSnake

BBSnake/: CMakeLists.txt  README.md  active_figure.cpp  active_figure.h  ancontainer.cpp  ancontainer.h  color.h  direction.h  display.cpp  display.h  eat.cpp  eat.h  enemy.cpp  enemy.h  figure.cpp  figure.h  hline.cpp  hline.h  hwall.cpp  hwall.h  initalizer.cpp  initalizer.h  main.cpp  non_active_figure.cpp  non_active_figure.h  point.cpp  point.h  snake.cpp  snake.h  traceline.cpp  traceline.h  vline.cpp  vline.h  vwall.cpp  vwall.h
OLDBBSnake/: main.cpp
build-BBSnake-Desktop-Debug/: BBSnake  CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake  snake
build-BBSnake-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-6aff53aef5044096411f.json  codemodel-v2-48dc3042feb1fa1a2446.json  index-2022-05-09T23-34-55-0086.json  target-BBSnake-Debug-5cbf4c6ebc9c3f9a8b94.json
build-BBSnake-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-13478b51a0e4ad3c1663.json  cmakeFiles-v1-d08feab7791645c1ce58.json  codemodel-v2-10223608036b97fd3f38.json  index-2022-05-09T23-32-51-0601.json  target-snake-Debug-16ff23a05c78935ea0e0.json
